# marc_pd_tool

./: .gitignore  .gitmodules  LICENSE  README.md  compare.py  config.json  pyproject.toml  wordlists.json
docs/: ALGORITHM.md  API.md  ARCHITECTURE.md  CLI_REFERENCE.md  COPYRIGHT_STATUS_CODES.md  COPYRIGHT_STATUS_RULES.md  DEVELOPMENT.md  GUIDE.md  MATCHING_ALGORITHM.md  PIPELINE.md  REFERENCE.md  TECHNICAL_ARCHITECTURE.md  TESTING.md  TEST_COVERAGE_FINAL.md  TEST_COVERAGE_PROCESSING_100.md  TEST_COVERAGE_SUMMARY.md
lint/: pre-commit.sh  set-up-hooks.sh
marc_pd_tool/: __init__.py  __main__.py  api.py  batch_processor.py  cache_manager.py  cli.py  config_loader.py  copyright_loader.py  csv_exporter.py  default_matching.py  enums.py  generic_title_detector.py  indexer.py  marc_extractor.py  marc_utilities.py  matching_api.py  matching_engine.py  publication.py  renewal_loader.py  text_utils.py
marc_pd_tool/api/: __init__.py  _analyzer.py  _export.py  _ground_truth.py  _processing.py  _results.py  _streaming.py
marc_pd_tool/cli/: __init__.py  main.py
marc_pd_tool/data/: __init__.py  enums.py  ground_truth.py  publication.py
marc_pd_tool/exporters/: __init__.py  base_exporter.py  csv_exporter.py  ground_truth_csv_exporter.py  html_exporter.py  json_exporter.py  xlsx_exporter.py  xlsx_stacked_exporter.py
marc_pd_tool/infrastructure/: __init__.py  cache_manager.py  config_loader.py  run_index_manager.py
marc_pd_tool/loaders/: __init__.py  copyright_loader.py  marc_extractor.py  marc_loader.py  renewal_loader.py
marc_pd_tool/processing/: __init__.py  default_matching.py  generic_title_detector.py  ground_truth_extractor.py  indexer.py  matching_api.py  matching_engine.py  score_analyzer.py  similarity_calculator.py  text_processing.py
marc_pd_tool/utils/: __init__.py  marc_utilities.py  memory_utils.py  mixins.py  publisher_utils.py  text_utils.py  time_utils.py  types.py
scripts/: README.md  add_file_headers.py  benchmark_lccn_indexing.py  generate_baseline_scores.py
scripts/analysis/: __init__.py  ground_truth_extractor.py  ground_truth_scores.py  score_analyzer.py
tests/: __init__.py  conftest.py  test_confidence_scores.py  test_csv_multiple_files.py  test_dynamic_filenames.py  test_indexing.py  test_key_generation.py  test_us_only_filtering.py  test_year_filtering.py
tests/fixtures/: __init__.py  data_files.py  known_mismatches_with_baselines.csv  matches.py  publications.py
tests/integration/: __init__.py  conftest.py  test_cache_behavior.py  test_full_workflow.py  test_large_files.py  test_mock_workflow.py  test_multiprocessing_platforms.py
tests/performance/: __init__.py  conftest.py  test_refactor_performance.py
tests/regression/: README.md  test_scoring_regression.py
tests/scoring/: README.md  test_derived_work_detection.py  test_missing_field_redistribution.py  test_multi_field_validation.py  test_non_lccn_performance.py  test_scoring_regression.py  test_smarter_fuzzy_matching.py  test_threshold_calibration.py
tests/test_adapters/: test_cli_logging_fixes.py
tests/test_analysis/: __init__.py  test_ground_truth_extractor.py  test_score_analyzer.py
tests/test_api/: __init__.py  test_analysis_results.py  test_api_comprehensive.py  test_api_core.py  test_api_error_handling.py  test_api_export.py  test_api_functions.py  test_api_parallel.py  test_api_worker_methods.py  test_batch_size_consistency.py  test_ground_truth_csv.py  test_marc_copyright_analyzer_proper.py  test_simplified_api.py
tests/test_cli/: __init__.py  test_cli_full_coverage.py  test_config_defaults.py  test_default_logging.py  test_dynamic_filenames.py  test_main_cli.py  test_main_function.py
tests/test_config/: test_config_loader.py
tests/test_copyright_loader/: test_volume_extraction.py
tests/test_csv_exporter/: test_confidence_scores.py  test_multiple_files.py
tests/test_data/: __init__.py  test_copyright_status_determination.py  test_copyright_status_hypothesis.py  test_dual_author_support.py  test_match_result.py  test_parts_support.py  test_publication_methods.py
tests/test_data_loaders/: __init__.py  test_copyright_loader.py  test_renewal_loader.py
tests/test_exporters/: __init__.py  conftest.py  test_confidence_scores.py  test_ground_truth_csv_exporter.py  test_html_exporter_simple.py  test_json_exporter.py  test_multiple_files.py  test_xlsx_exporter.py  test_xlsx_stacked_exporter.py
tests/test_generic_title_detector/: __init__.py  test_detection_logic.py  test_pattern_matching.py
tests/test_indexer/: __init__.py  test_key_generation.py  test_parts_indexing.py
tests/test_infrastructure/: __init__.py  test_cache_manager_comprehensive.py  test_config_loader.py  test_logging_format.py  test_marc_caching.py  test_run_index_manager.py  test_year_filtered_caching.py
tests/test_loaders/: __init__.py  test_1xx_author_extraction.py  test_bracketed_content_in_marc.py  test_copyright_loader.py  test_copyright_loader_edge_cases.py  test_marc_beyond_data_filtering.py  test_marc_loader_comprehensive.py  test_max_data_year_detection.py  test_renewal_loader.py  test_renewal_loader_comprehensive.py  test_renewal_volume_extraction.py  test_streaming_marc_loader.py  test_us_only_filtering.py  test_volume_extraction.py  test_year_filtered_data_loading.py  test_year_filtering.py  test_year_range_detection.py
tests/test_marc_extractor/: test_1xx_author_extraction.py  test_year_filtering.py
tests/test_marc_utilities/: __init__.py  test_country_extraction.py
tests/test_matching_api/: test_backward_compatibility.py  test_default_matching.py  test_matching_api.py
tests/test_matching_engine/: __init__.py  test_indexing.py
tests/test_processing/: __init__.py  test_author_threshold_fix.py  test_backward_compatibility.py  test_custom_stopwords.py  test_default_matching.py  test_detection_logic.py  test_enhanced_preprocessing.py  test_ground_truth_extractor_comprehensive.py  test_indexer.py  test_indexer_100_coverage.py  test_indexing.py  test_key_generation.py  test_lccn_indexing.py  test_lccn_scoring.py  test_matching.py  test_matching_api.py  test_parts_indexing.py  (+14 more)
(+192 files in other folders)
