[project]
name = "marc-pd-comparison-tool"
version = "0.1.0"
description = "Compare MARC and public domain publication data"
authors = [
    {name = "Jon Stroop", email = "jsgh@jopast.io"},
]
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
]

requires-python = ">=3.12"
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "mdformat>=0.7.22",
    "mdformat-gfm>=0.4.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = {source = "file", path = "pyproject.toml"}

[tool.black]
line-length = 100
preview = true
quiet = true
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
multi_line_output = 3
force_single_line = true
force_sort_within_sections = true
quiet = true
known_first_party = ["marc_pd_tool"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Local imports"
import_heading_localfolder = "Local folder imports"

[tool.mdformat]
number = true
wrap = 80
extensions = [
    "gfm"
]

[tool.pdm.scripts]
black = { cmd = "black ." }
isort = { cmd = "isort ." }
mdformat = { cmd = "mdformat ." }
test = { cmd = "pytest tests/ -v" }
# Black can't ignore submodules. Below is the hack:
submod_clean = { shell = "cd ./nypl-ren ; git checkout . -q ; cd ../nypl-reg ; git checkout . -q ; cd ../" }
format = { composite = [ "black", "isort", "mdformat", "submod_clean" ] }